--- a/templates/web/empresa.html
+++ b/templates/web/empresa.html
@@ -184,7 +184,7 @@
                                     {% endif %}
 
                                     <picture>
-                                        <source type="image/webp" srcset="{{ aliado.logo_webp.url }}">
+{#                                        <source type="image/webp" srcset="{{ aliado.logo_webp.url }}">#}
                                         <source type="image/png" srcset="{{ aliado.logo.url }}">
                                         <img data-src="{{ aliado.logo.url }}"
                                              alt="{{ aliado.nombre }} es aliado de Odecopack"
