--- a/templates/web/index.html
+++ b/templates/web/index.html
@@ -11,7 +11,21 @@
 {% endblock %}
 
 {% block menu %}
+    {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
     <style>
+        {% if index_configuracion.header_imagen %}
+            @media only screen and (max-width: 600px) {
+                .header-imagen {
+                    background-image: url({{ index_configuracion.header_imagen_cell.url }}),
+                }
+            }
+            @media only screen and (min-width: 601px) {
+                .header-imagen {
+                    background-image: url({{ index_configuracion.header_imagen.url }})
+                }
+            }
+        {% endif %}
+
         .overlayPlubicidadClose {
             text-align: center;
             position: absolute;
@@ -23,8 +37,6 @@
             cursor: pointer;
         }
     </style>
-
-    {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
     {% include 'web/base/menu.html' with es_menu_index=True %}
 
     {% if index_configuracion.overlay_publicidad %}
@@ -35,7 +47,8 @@
                         <div class="col-12 col-md-6 wow fadeIn">
                             <figure class="flex-center">
                                 {% if index_configuracion.overlay_url %}<a
-                                    href="{{ index_configuracion.overlay_url }}" rel="noopener" target="_blank" {% endif %}>
+                                    href="{{ index_configuracion.overlay_url }}" rel="noopener"
+                                    target="_blank" {% endif %}>
                                     <img class="img-fluid" src="{{ index_configuracion.overlay_publicidad.url }}"
                                          alt="">
                                     {% if index_configuracion.overlay_url %}
@@ -49,9 +62,7 @@
             </div>
         </div>
     {% endif %}
-    <div class="view intro"
-         style="{% if index_configuracion.header_imagen %}background-image: url({{ index_configuracion.header_imagen.url }}){% endif %}"
-         id="home">
+    <div class="view intro" id="home">
         <div class="hm-black-strong-1">
             <div class="full-bg-img flex-center">
                 <div class="container">
@@ -91,6 +102,28 @@
 
 <script>
     {% block final_scripts %}
+        {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
+        WebpIsSupported(function (isSupported) {
+            if (isSupported) {
+                {% if index_configuracion.header_imagen %}
+                    if (window.matchMedia("(max-width: 600px)").matches) {
+                        document.getElementById('home').style.backgroundImage = "url({{ index_configuracion.header_imagen_cell_webp.url }})";
+                    } else {
+                        document.getElementById('home').style.backgroundImage = "url({{ index_configuracion.header_imagen_webp.url }})";
+                    }
+                {% endif %}
+            } else {
+                {% if index_configuracion.header_imagen %}
+                    if (window.matchMedia("(max-width: 600px)").matches) {
+                        document.getElementById('home').style.backgroundImage = "url({{ index_configuracion.header_imagen_cell.url }})";
+                    } else {
+                        document.getElementById('home').style.backgroundImage = "url({{ index_configuracion.header_imagen_normal.url }})";
+                    }
+                {% endif %}
+            }
+        });
+
+
         {% get_solo 'web_configurations.IndexConfiguration' as index_configuracion %}
         {% if index_configuracion.overlay_publicidad %}
             function onOverlayPublicidad() {
