--- a/templates/web/base/menu.html
+++ b/templates/web/base/menu.html
@@ -3,7 +3,7 @@
 <div {% if es_menu_index == True %}class="index"{% endif %}>
     <nav class="navbar fixed-top navbar-expand-lg scrolling-navbar menu-odeco {% if es_menu_index == True %}navbar-toggleable-md{% endif %}">
         <a class="navbar-brand" href="{% url 'index' %}">
-            <img width="210px" src="{% static 'web/img/logo-odecopack2.png' %}" alt="">
+            <img width="210px" data-src="{% static 'web/img/logo-odecopack2.png' %}" alt="">
         </a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
