--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -5,21 +5,21 @@
 <html lang="{{ LANGUAGE_CODE }}" class="{% block html_class %}{% endblock %}">
 
 <head>
-    <!-- Google Tag Manager -->
-    <script>(function (w, d, s, l, i) {
-        w[l] = w[l] || [];
-        w[l].push({
-            'gtm.start':
-                new Date().getTime(), event: 'gtm.js'
-        });
-        var f = d.getElementsByTagName(s)[0],
-            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';
-        j.async = true;
-        j.src =
-            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;
-        f.parentNode.insertBefore(j, f);
-    })(window, document, 'script', 'dataLayer', 'GTM-FPBF9LX');</script>
-    <!-- End Google Tag Manager -->
+    {#    <!-- Google Tag Manager -->#}
+    {#    <script>(function (w, d, s, l, i) {#}
+    {#        w[l] = w[l] || [];#}
+    {#        w[l].push({#}
+    {#            'gtm.start':#}
+    {#                new Date().getTime(), event: 'gtm.js'#}
+    {#        });#}
+    {#        var f = d.getElementsByTagName(s)[0],#}
+    {#            j = d.createElement(s), dl = l != 'dataLayer' ? '&l=' + l : '';#}
+    {#        j.async = true;#}
+    {#        j.src =#}
+    {#            'https://www.googletagmanager.com/gtm.js?id=' + i + dl;#}
+    {#        f.parentNode.insertBefore(j, f);#}
+    {#    })(window, document, 'script', 'dataLayer', 'GTM-FPBF9LX');</script>#}
+    {#    <!-- End Google Tag Manager -->#}
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
@@ -155,10 +155,13 @@
     });
 
 
-    function init() {
+    function inicial() {
         if ('IntersectionObserver' in window) {
             var preloadImage = function (elemento) {
                 elemento.setAttribute('src', elemento.getAttribute('data-src'));
+            };
+            var preloadSource = function (elemento) {
+                elemento.setAttribute('srcset', elemento.getAttribute('data-srcset'));
             };
 
             var myObserver = new IntersectionObserver(function (entries, self) {
@@ -166,6 +169,9 @@
                     if (entry.isIntersecting) {
                         if (entry.target.getAttribute('data-src')) {
                             preloadImage(entry.target);
+                        }
+                        if (entry.target.getAttribute('data-srcset')) {
+                            preloadSource(entry.target);
                         }
                         self.unobserve(entry.target);
                     }
@@ -202,6 +208,12 @@
                     imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
                 }
             }
+            var imgSource = document.getElementsByTagName('source');
+            for (var i = 0; i < imgSource.length; i++) {
+                if (imgSource[i].getAttribute('data-srcset')) {
+                    imgSource[i].setAttribute('srcset', imgSource[i].getAttribute('data-srcset'));
+                }
+            }
         }
 
         {% block onLoadScript %}
@@ -209,7 +221,7 @@
         {% endblock %}
     }
 
-    window.onload = init;
+    window.onload = inicial;
 
     {% block final_scripts %}
 
