--- a/templates/web/clientes.html
+++ b/templates/web/clientes.html
@@ -2,70 +2,70 @@
 {% get_current_language as LANGUAGE_CODE %}
 {% get_solo 'web_configurations.CacheConfiguration' as cache_configuracion %}
 <section id="clientes" class="section background-white pt-4 clientes">
-    {% cache 345600 index_cache_clientes cache_configuracion.clientes_update LANGUAGE_CODE %}
-        {% with clientes_lista=clientes_list %}
-            {% if clientes_lista %}
-                <div class="container-fluid">
-                    <div class="container py-3">
-                        <h1 class="section-heading h1 pt-4 text-center text-sm-left">
-                            {% trans "CLIENTES" %}</h1>
-                        <div id="carousel-clientes" class="carousel slide carousel-multi-item" data-ride="carousel">
-                            <div class="carousel-inner" role="listbox">
-                                {% for cliente in clientes_lista %}
-                                    {% if forloop.counter0|divisibleby:6 or forloop.first %}
-                                        <div class="carousel-item {% if forloop.first %}active{% endif %}">
-                                        <div class="view">
-                                        <div class="row justify-content-center">
-                                    {% endif %}
-
-                                <div class="col-4 col-sm-3 flex-center">
-                                    <picture>
-                                        <source type="image/webp" srcset="{{ cliente.logo_webp.url }}">
-                                        <source type="image/png" srcset="{{ cliente.logo.url }}">
-                                        <img data-src="{{ cliente.logo.url }}"
-                                             alt="{{ cliente.nombre }} es cliente de Odecopack"
-                                             class="img-fluid"/>
-                                    </picture>
-                                </div>
-
-                                {% if forloop.counter|divisibleby:6 or forloop.last %}
-                                    </div>
-                                    </div>
-                                    </div>
+    {#    {% cache 345600 index_cache_clientes cache_configuracion.clientes_update LANGUAGE_CODE %}#}
+    {% with clientes_lista=clientes_list %}
+        {% if clientes_lista %}
+            <div class="container-fluid">
+                <div class="container py-3">
+                    <h1 class="section-heading h1 pt-4 text-center text-sm-left">
+                        {% trans "CLIENTES" %}</h1>
+                    <div id="carousel-clientes" class="carousel slide carousel-multi-item" data-ride="carousel">
+                        <div class="carousel-inner" role="listbox">
+                            {% for cliente in clientes_lista %}
+                                {% if forloop.counter0|divisibleby:6 or forloop.first %}
+                                    <div class="carousel-item {% if forloop.first %}active{% endif %}">
+                                    <div class="view">
+                                    <div class="row justify-content-center">
                                 {% endif %}
-                                {% endfor %}
-                            </div>
-                            <a class="carousel-control-prev d-none d-sm-flex" href="#carousel-clientes" role="button"
-                               data-slide="prev">
-                                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Anterior</span>
-                            </a>
-                            <a class="carousel-control-next d-none d-sm-flex" href="#carousel-clientes" role="button"
-                               data-slide="next">
-                                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                <span class="sr-only">Siguiente</span>
-                            </a>
 
-                            <div class="controls-top d-sm-none">
-                                <a class="btn-floating" href="#carousel-clientes" data-slide="prev"><i
-                                        class="fa fa-chevron-left"></i></a>
-                                <a class="btn-floating" href="#carousel-clientes" data-slide="next"><i
-                                        class="fa fa-chevron-right"></i></a>
+                            <div class="col-4 col-sm-3 flex-center">
+                                <picture>
+                                    <source type="image/webp" data-srcset="{{ cliente.logo_webp.url }}">
+                                    <source type="image/png" data-srcset="{{ cliente.logo.url }}">
+                                    <img data-src="{{ cliente.logo.url }}"
+                                         alt="{{ cliente.nombre }} es cliente de Odecopack"
+                                         class="img-fluid"/>
+                                </picture>
                             </div>
 
-                            <ol class="carousel-indicators d-none d-sm-flex">
-                                {% for cliente in clientes_lista %}
-                                    {% if forloop.counter0|divisibleby:6 or forloop.first %}
-                                        <li data-target="#carousel-clientes"
-                                            data-slide-to="{{ forloop.counter0|carrousel_indicator_index:'6' }}"
-                                            {% if forloop.first %}class="active"{% endif %}></li>
-                                    {% endif %}
-                                {% endfor %}
-                            </ol>
+                            {% if forloop.counter|divisibleby:6 or forloop.last %}
+                                </div>
+                                </div>
+                                </div>
+                            {% endif %}
+                            {% endfor %}
                         </div>
+                        <a class="carousel-control-prev d-none d-sm-flex" href="#carousel-clientes" role="button"
+                           data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Anterior</span>
+                        </a>
+                        <a class="carousel-control-next d-none d-sm-flex" href="#carousel-clientes" role="button"
+                           data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Siguiente</span>
+                        </a>
+
+                        <div class="controls-top d-sm-none">
+                            <a class="btn-floating" href="#carousel-clientes" data-slide="prev"><i
+                                    class="fa fa-chevron-left"></i></a>
+                            <a class="btn-floating" href="#carousel-clientes" data-slide="next"><i
+                                    class="fa fa-chevron-right"></i></a>
+                        </div>
+
+                        <ol class="carousel-indicators d-none d-sm-flex">
+                            {% for cliente in clientes_lista %}
+                                {% if forloop.counter0|divisibleby:6 or forloop.first %}
+                                    <li data-target="#carousel-clientes"
+                                        data-slide-to="{{ forloop.counter0|carrousel_indicator_index:'6' }}"
+                                        {% if forloop.first %}class="active"{% endif %}></li>
+                                {% endif %}
+                            {% endfor %}
+                        </ol>
                     </div>
                 </div>
-            {% endif %}
-        {% endwith %}
-    {% endcache %}
+            </div>
+        {% endif %}
+    {% endwith %}
+    {#    {% endcache %}#}
 </section>
