--- a/templates/web/base/base.html
+++ b/templates/web/base/base.html
@@ -77,6 +77,11 @@
 <script type="text/javascript" src="{% static 'web/js/mdb.min.js' %}"></script>
 
 <script>
+
+    function preventPassiveListener(ev) {
+        ev.preventDefault();
+    }
+
     function defer_css_load(css_file) {
         var giftofspeed = document.createElement('link');
         giftofspeed.rel = 'stylesheet';
@@ -106,6 +111,21 @@
                 callback(false);
             });
         });
+    }
+
+    function suportPassiveListeners() {
+        var supportsPassive = false;
+        try {
+            var opts = Object.defineProperty({}, 'passive', {
+                get: function () {
+                    supportsPassive = true;
+                }
+            });
+            window.addEventListener("testPassive", null, opts);
+            window.removeEventListener("testPassive", null, opts);
+        } catch (e) {
+        }
+        return supportsPassive
     }
 
 
@@ -152,6 +172,13 @@
 
 
     function inicial() {
+
+        var suportPassive = suportPassiveListeners();
+        document.addEventListener('touchstart', preventPassiveListener, suportPassive ? {passive: true} : false);
+        document.addEventListener('wheel', preventPassiveListener, suportPassive ? {passive: true} : false);
+        document.addEventListener('mousewheel', preventPassiveListener, suportPassive ? {passive: true} : false);
+        document.addEventListener('touchmove', preventPassiveListener, suportPassive ? {passive: true} : false);
+
         if ('IntersectionObserver' in window) {
             var preloadImage = function (elemento) {
                 elemento.setAttribute('src', elemento.getAttribute('data-src'));
@@ -179,17 +206,23 @@
 
             var elementToObserve = document.getElementsByTagName('img');
             for (var i = 0; i < elementToObserve.length; i++) {
-                myObserver.observe(elementToObserve[i]);
+                if (elementToObserve[i].getAttribute('data-src')) {
+                    myObserver.observe(elementToObserve[i]);
+                }
             }
 
             var elementVideoToObserve = document.getElementsByTagName('iframe');
             for (var i = 0; i < elementVideoToObserve.length; i++) {
-                myObserver.observe(elementVideoToObserve[i]);
+                if (elementVideoToObserve[i].getAttribute('data-src')) {
+                    myObserver.observe(elementVideoToObserve[i]);
+                }
             }
 
             var elementSourceToObserve = document.getElementsByTagName('source');
             for (var i = 0; i < elementSourceToObserve.length; i++) {
-                myObserver.observe(elementSourceToObserve[i]);
+                if (elementSourceToObserve[i].getAttribute('data-srcset')) {
+                    myObserver.observe(elementSourceToObserve[i]);
+                }
             }
         } else {
             var vidDefer = document.getElementsByTagName('iframe');
@@ -202,6 +235,12 @@
             for (var i = 0; i < imgDefer.length; i++) {
                 if (imgDefer[i].getAttribute('data-src')) {
                     imgDefer[i].setAttribute('src', imgDefer[i].getAttribute('data-src'));
+                }
+            }
+            var sourceDefer = document.getElementsByTagName('script');
+            for (var i = 0; i < imgDefer.length; i++) {
+                if (sourceDefer[i].getAttribute('data-srcset')) {
+                    sourceDefer[i].setAttribute('src', sourceDefer[i].getAttribute('data-srcset'));
                 }
             }
         }
